Fixed problem with text overflow

--- a/src/scss/Mountain_collections.scss
+++ b/src/scss/Mountain_collections.scss
@@ -15,6 +15,7 @@
     > h1 {
         font-size: 3.5em;
         margin-bottom: 0.6em;
+        word-break: break-all;
     }
     > .text {
         width: 35%;
